--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 
 <img src="ucuzal_logo.png" class="center" />
-<p align="center">Pulsuz Elanlar Saytı</p>
-<p align="center">Tezliklə</p>
+<h1 align="center">Pulsuz Elanlar Saytı</h1>
+<h2 align="center">Tezliklə</h2>
 <style>.center {  display: block;  margin-left: auto;  margin-right: auto;  width: 50%;}
 </style>
 </body>
