--- a/nakhchivan/index.html
+++ b/nakhchivan/index.html
@@ -10,38 +10,14 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.compiled.css">
-<script async="" src="https://buttons-config.sharethis.com/js/5e031722de383a00198ea15d.js"></script><script async="" src="https://cdn.curator.io/published/cdbfe49e-c39e-44f2-b21e-d63999b2aeb8.js"></script><script type="text/javascript" async="" src="https://www.gstatic.com/recaptcha/releases/CDFvp7CXAHw7k3HxO47Gm1O9/recaptcha__az.js" crossorigin="anonymous" integrity="sha384-hsIaZ0lAoBX0MdL0rk8icMhkeHZcTOVJtfij8dIpKPl3tLES5wRv5LzHI3/CeO5I"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-4PLGPVGVVF" type="text/javascript"></script>
-<script type="text/javascript">   window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-4PLGPVGVVF'); </script>
+<script async="" src="https://buttons-config.sharethis.com/js/5e031722de383a00198ea15d.js"></script><script async="" src="https://cdn.curator.io/published/cdbfe49e-c39e-44f2-b21e-d63999b2aeb8.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<link rel="apple-touch-icon" sizes="57x57" href="{--><!--{ asset('images/favicon/apple-icon-57x57.png') }}">
-<link rel="apple-touch-icon" sizes="60x60" href="https://nakhchivan.azerbaijan.travel/images/favicon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="https://nakhchivan.azerbaijan.travel/images/favicon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="https://nakhchivan.azerbaijan.travel/images/favicon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="https://nakhchivan.azerbaijan.travel/images/favicon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="https://nakhchivan.azerbaijan.travel/images/favicon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="https://nakhchivan.azerbaijan.travel/images/favicon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="https://nakhchivan.azerbaijan.travel/images/favicon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="https://nakhchivan.azerbaijan.travel/images/favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192" href="https://nakhchivan.azerbaijan.travel/images/favicon/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://nakhchivan.azerbaijan.travel/images/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="https://nakhchivan.azerbaijan.travel/images/favicon/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="https://nakhchivan.azerbaijan.travel/images/favicon/favicon-16x16.png">
-<link rel="manifest" href="https://nakhchivan.azerbaijan.travel/images/favicon/manifest.json" crossorigin="use-credentials">
-<link rel="canonical" href="https://nakhchivan.azerbaijan.travel">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="https://nakhchivan.azerbaijan.travel/images/favicon/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
-<meta name="csrf-token" content="bYTWlMo0tkPw8iv5ZVSE2hrUdQQ7bX2yUaFb110l">
-<meta name="g-token" content="6LcdOeAUAAAAACTZCtf9Zf01KGQMl_C8q4TvrbKz">
+
+
 <title>Naxçıvan: Bir daha bax | Nakhchivan.Travel</title>
 <meta name="description" content="Azərbaycan əzəmətli dağları, füsunkar təbiəti, dadlı mətbəxi, qədim tarixi, rəngarəng mədəniyyəti və ən əsası, qonaqpərvər insanları ilə daim yeni və unudulmaz səyahət xatirələri bəxş edir. Ölkəmizin turizm imkanlarını&nbsp;bizimlə birgə kəşf edin.&nbsp;">
-<meta property="og:url" content="https://nakhchivan.azerbaijan.travel">
+<meta property="og:url" content="https://nakhchivan.travel">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Naxçıvan: Bir daha bax | Nakhchivan.Travel">
 <meta property="og:description" content="Azərbaycan əzəmətli dağları, füsunkar təbiəti, dadlı mətbəxi, qədim tarixi, rəngarəng mədəniyyəti və ən əsası, qonaqpərvər insanları ilə daim yeni və unudulmaz səyahət xatirələri bəxş edir. Ölkəmizin turizm imkanlarını&nbsp;bizimlə birgə kəşf edin.&nbsp;">
@@ -50,13 +26,9 @@
 <meta property="og:image:height" content="900">
 <meta name="twitter:image" content="">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:description" content="Azərbaycan əzəmətli dağları, füsunkar təbiəti, dadlı mətbəxi, qədim tarixi, rəngarəng mədəniyyəti və ən əsası, qonaqpərvər insanları ilə daim yeni və unudulmaz səyahət xatirələri bəxş edir. Ölkəmizin turizm imkanlarını&nbsp;bizimlə birgə kəşf edin.&nbsp;">
+<meta name="twitter:description" content="Naxçıvanın əzəmətli dağları, füsunkar təbiəti, dadlı mətbəxi, qədim tarixi, rəngarəng mədəniyyəti və ən əsası, qonaqpərvər insanları ilə daim yeni və unudulmaz səyahət xatirələri bəxş edir. Ölkəmizin turizm imkanlarını&nbsp;bizimlə birgə kəşf edin.&nbsp;">
 <meta name="twitter:title" content="Naxçıvan: Bir daha bax | Nakhchivan.Travel">
 <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­<style>.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}</style></div><base href="https://nakhchivan.azerbaijan.travel">
-<script type="text/javascript">
-        window.g_token = "6LcdOeAUAAAAACTZCtf9Zf01KGQMl_C8q4TvrbKz";
-    </script>
-<script src="https://www.google.com/recaptcha/api.js?render=6LcdOeAUAAAAACTZCtf9Zf01KGQMl_C8q4TvrbKz" type="text/javascript"></script>
 <link href="https://nakhchivan.azerbaijan.travel/style2.min.css?id=2sdf2sdfs4d" rel="stylesheet">
 <link href="https://nakhchivan.azerbaijan.travel/curator.css" rel="stylesheet">
 <link href="https://nakhchivan.azerbaijan.travel/new.css?id=125422115pyrb54r5" rel="stylesheet">
@@ -70,33 +42,27 @@
 <div class="header-top-bar">
 <div class="container">
 <div>
-<div class="header-top-nav popup-holder"><a class="opener popup-opener" href="#">azerbaijan.travel</a>
+<div class="header-top-nav popup-holder"><a class="opener popup-opener" href="#">nakhchivan.travel</a>
 <ul>
-<li><a target="_blank" href="https://meetinazerbaijan.com/">meetinazerbaijan</a></li><li><a target="_blank" href="https://tourismboard.az/az">Azərbaycan Turizm Bürosu</a></li><li><a target="_blank" href="https://nakhchivan.azerbaijan.travel/kiv/press-relizler">KİV</a></li> </ul>
+<li><a target="_blank" href="http://turizm.nakhchivan.az/">Turizm Naxçıvan</a></li><li><a target="_blank" href="https://nakhchivan.azerbaijan.travel/kiv/press-relizler">KİV</a></li> </ul>
 </div>
 <ul class="header-social-icons">
 <li>
-<a target="_blank" class="fab fa-facebook-f" href="https://www.facebook.com/ExperienceAZE/"></a>
+<a target="_blank" class="fab fa-facebook-f" href="https://www.facebook.com/Naxcivanturizminformasiyamerkezi/"></a>
 </li>
 <li>
-<a target="_blank" class="fab fa-twitter" href="https://twitter.com/experienceaze"></a>
+<a target="_blank" class="fab fa-instagram" href="https://www.instagram.com/tourismnakhchivan/"></a>
 </li>
 <li>
-<a target="_blank" class="fab fa-instagram" href="https://www.instagram.com/experienceazerbaijan/"></a>
-</li>
-<li>
-<a target="_blank" class="fab fa-youtube" href="https://www.youtube.com/channel/UCJvKUQoRB97StBM5c-3PS4Q"></a>
-</li>
-<li>
-<a target="_blank" class="fas fa-podcast" href="https://podcast.azerbaijan.travel/"></a>
+<a target="_blank" class="fab fa-youtube" href="https://www.youtube.com/channel/UCNRS-126CPb1msdK2mWaFIA"></a>
 </li>
 </ul>
 </div>
 <div>
 <div class="lang-bar"><a class="opener far fa-chevron-down" href="#">Azərbaycanca</a>
 <ul>
-<li><a href="https://nakhchivan.azerbaijan.travel?hl=en ">English</a></li>
-<li><a href="https://nakhchivan.azerbaijan.travel?hl=ru ">Русский</a></li>
+<li><a href="https://nakhchivan.travel?hl=en ">English</a></li>
+<li><a href="https://nakhchivan.travel?hl=ru ">Русский</a></li>
 </ul>
 </div>
 </div>
@@ -107,7 +73,7 @@
 <div>
 <strong class="logo">
 <a>
-<img src="https://nakhchivan.azerbaijan.travel/images/nakhchivan_logo.svg" alt="Nakhchivan Travel" width="165" height="32">
+<img src="images/nakhchivan_logo.svg" alt="Nakhchivan Travel" width="165" height="32">
 </a>
 </strong>
 <div id="desktop-nav">
@@ -123,11 +89,11 @@
 </li><li><a href="#">şəhərlər və marşrutlar</a>
 <div class="sub-menu">
 <div class="row"><div class="sub-menu__item sub-menu__item--routs">
-<img src="https://nakhchivan.azerbaijan.travel/storage/pages/10/3ab3f28a-ca58-4628-94e3-f52c233b1564.svg" alt="Şimal marşrutu">
+<img src="https://ucuzal.az/nakhchivan/images/main_page/%C5%9Eimal%20istiqam%C9%99ti(X%C9%99rit%C9%99%20sayt).png" alt="Şimal marşrutu">
 </div><div class="sub-menu__item sub-menu__item--routs"><a href="#" class="sub-menu__main">marşrutlar</a>
 <div class="row">
 <ul>
-<li><a data-img="https://nakhchivan.azerbaijan.travel/storage/pages/10/3ab3f28a-ca58-4628-94e3-f52c233b1564.svg" href="https://nakhchivan.azerbaijan.travel/simal-marsrutu">Şimal marşrutu</a></li><li><a data-img="https://nakhchivan.azerbaijan.travel/storage/pages/221/4c1f87cb-519e-48cc-87af-87cee41a64fb.svg" href="https://nakhchivan.azerbaijan.travel/simal-qerb-marsrutu">Şimal-qərb marşrutu</a></li><li><a data-img="https://nakhchivan.azerbaijan.travel/storage/pages/222/SUINVIHtabhoa495XoRQF5vonUdyIjVuH7rvPeu6.svg" href="https://nakhchivan.azerbaijan.travel/qerb-marsrutu">Qərb marşrutu</a></li><li><a data-img="https://nakhchivan.azerbaijan.travel/storage/pages/223/030a00c5-ce59-43c1-a62e-6fdff51b4de7.svg" href="https://nakhchivan.azerbaijan.travel/cenub-marsrutu">Cənub marşrutu</a></li>
+<li><a data-img="https://ucuzal.az/nakhchivan/images/main_page/%C5%9Eimal%20istiqam%C9%99ti(X%C9%99rit%C9%99%20sayt).png" href="https://nakhchivan.azerbaijan.travel/simal-qerb-marsrutu">Şimal marşrutu</a></li><li><a data-img="https://ucuzal.az/nakhchivan/images/main_page/%C5%9Eimal-Q%C9%99rb%20istiqam%C9%99ti%20(X%C9%99rit%C9%99%20sayt%20).png" href="https://nakhchivan.azerbaijan.travel/qerb-marsrutu">Şimal-qərb marşrutu</a></li><li><a data-img="https://ucuzal.az/nakhchivan/images/main_page/C%C9%99nub-%C5%9E%C9%99rq%20istiqam%C9%99ti%20(X%C9%99rit%C9%99%20sayt%20).png" href="https://nakhchivan.azerbaijan.travel/cenub-marsrutu">Cənub-şərq marşrutu</a></li>
 </ul></div></div><div class="sub-menu__item "><a href="#" class="sub-menu__main">şəhərlər və regionlar</a>
 <div class="row">
 <ul>
@@ -385,7 +351,6 @@
 </div>
 </div>
 
-<!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div><!-- The Javascript can be moved to the end of the html page before the </body> tag --><script type="text/javascript">
 /* curator-feed-default-feed-layout */
 (function(){
