--- a/nakhchivan/index.html
+++ b/nakhchivan/index.html
@@ -260,13 +260,20 @@
 <div class="intro_sliders">
 <div>
 <section class="section-intro">
-<div class="mobile-banner" style="background-image: url('https://nakhchivan.azerbaijan.travel/resize1600/center/pages/1/d8015002-ffe4-4504-ba5e-248f13f997f8.jpg')"></div>
-<div class="bg-holder non-retina" style="background-position-y:50%;background-image: url('https://nakhchivan.azerbaijan.travel/resize1600/center/pages/1/6896f984-2e88-4006-8496-94fb0ec0c8a6.jpg')"></div>
+<div class="mobile-banner">
+    <video autoplay muted loop>
+        <source src="https://ucuzal.az/nakhchivan/videos/batabat.mp4" type="video/mp4" />
+    </video>
+    </div>
+<div class="bg-holder non-retina">
+    <video autoplay muted loop>
+        <source src="https://ucuzal.az/nakhchivan/videos/batabat.mp4" type="video/mp4" />
+    </video>
+    </div>
 <div class="bg-holder retina" style="background-position-y:50%;background-image: url('https://nakhchivan.azerbaijan.travel/resize3200/center/pages/1/6896f984-2e88-4006-8496-94fb0ec0c8a6.jpg')"></div>
 <div class="container">
 <div class="content">
-<h1></h1>
-<a class="button" href="https://www.yumpu.com/en/document/read/66696868/19223-atb-experience-azerbaijan-magazine-n5-v2-preview">İndi oxuyun</a>
+<h1>Sakitləşdirən mənzərə <span>həyəcanlı macəra</span></h1>
 </div>
 </div>
 </section>
