--- a/nakhchivan/naxcivan.html
+++ b/nakhchivan/naxcivan.html
@@ -303,9 +303,9 @@
 <div class="list-holder">
 <div class="list-frame">
 <ul class="list">
-<li class="in-page-nav active "><a href="#region-haqda_100686">Region haqda</a></li>
-<li class="in-page-nav "><a href="#bilirsinizmi_100687">Bilirsinizmi?</a></li>
-<li class="in-page-nav "><a href="#fealiyyet-novleri_100688">Fəaliyyət növləri</a></li>
+<li class="in-page-nav active "><a href="#region-haqda">Region haqda</a></li>
+<li class="in-page-nav "><a href="#bilirsinizmi">Bilirsinizmi?</a></li>
+<li class="in-page-nav "><a href="#fealiyyet">Fəaliyyət növləri</a></li>
 </ul>
 </div>
 </div>
@@ -314,7 +314,47 @@
 </section>
 <br>
 <br>
-<div class="section-heading  inline lscenter">
+<section class="section-content" data-block="text_block_with_red_title_and_image_right" id="region-haqda">
+<div class="container">
+<div class="content-frame">
+<div class="aside"></div>
+<div class="content-holder">
+<p>Dünyanın möcüzə və sirlərlə zəngin naxışı</p>
+<p>Naxçıvan regionda ən qədim insan məskənlərindən hesab olunur. Bəzi mənbələrə görə, Nuhun gəmisi burada iki hissəyə parçalanıb. Naxçıvanla bağlı əfsanə və rəvayətlərə tez-tez rast gəlmək olar. Azərbaycanın memarlıq inciləri - XII əsrə aid Möminə Xatun türbəsi və Xan Sarayı da Naxçıvanda yerləşir. Ordubada aparan mənzərəli yollardan keçərək İlandağın haça zirvəsini görəcəksiniz. Əfsanələrə görə, Nuhun gəmisi məhz İlandağa dəyib. Yerli sakinlərin sizi səmimi qonaqpərvərliklə qarşılayacağından əmin olun.</p>
+</div>
+<div class="aside">
+<div class="widget media-holder">
+<img src="assets/img/map/simal.png" srcset="assets/img/map/simal.png 1x, assets/img/map/simal.png 2x" alt="" width="313" height=""> </div>
+</div>
+</div>
+</div>
+</section>
+<section class="block section-content" data-block="publication_block" id="bilirsinizmi">
+<div class="container">
+<div class="content-frame">
+<div class="aside"></div>
+<div class="content-holder">
+<div class="section-heading  inline "><strong class="pre-title">BİLİRSİNİZMİ?</strong>
+<h3>Naxçıvan<span>maraqlı faktlar</span></h3>
+</div>
+<div class="thumbnail-trip large no-hover">
+<div class="thumbnail-media-holder">
+<img src="https://azerbaijan.travel/fit278x397/center/pages/255/98d267f5-f0d4-4f91-83c6-be75aceb3b15.jpg" srcset="https://azerbaijan.travel/fit278x397/center/pages/255/98d267f5-f0d4-4f91-83c6-be75aceb3b15.jpg 1x, https://azerbaijan.travel/fit556x794/center/pages/255/98d267f5-f0d4-4f91-83c6-be75aceb3b15.jpg 2x" alt="BİLİRSİNİZMİ?" width="278" height="397">
+</div>
+<div class="thumbnail-content-default">
+<strong class="pre-title">MARAQLI FAKT #1</strong>
+<p>Naxçıvan həm də <strong>mineral bulaqlar muzeyi</strong> kimi tanınır. Burada 250-dən çox mineral su mənbəyi var. Eyni zamanda Naxçıvan “<strong>Sirab</strong>” və “<strong>Badamlı</strong>” kimi mineral su brendlərinin vətənidir.</p>
+<strong class="pre-title">MARAQLI FAKT #2</strong>
+<p>Naxçıvan <strong>2018-ci ildə İslam mədəniyyətinin paytaxtı</strong> elan edilib.</p>
+</div>
+</div>
+</div>
+<div class="aside"></div>
+</div>
+</div>
+</section>
+
+<div id="fealiyyet" class="section-heading  inline lscenter">
     <h2>Naxçıvanda<span> fəaliyyət növləri</span></h2></div>
 <!-- LƏTİF SADİQOV -->
 <!-- BEGINNING OF THE SLIDE -->
