--- a/nakhchivan/index.html
+++ b/nakhchivan/index.html
@@ -339,7 +339,7 @@
 </div>
 </section>
 </div>
-<div>
+<!-- <div>
 <section class="section-intro">
 <video autoplay muted class="latifvideo">
         <source src="https://ucuzal.az/nakhchivan/videos/elince.mp4" type="video/mp4" />
@@ -351,7 +351,7 @@
 </div>
 </div>
 </section>
-</div>
+</div> -->
 </div>
 
 <br>
