--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </svg></a></div>
 <style>.center {  display: block;  margin-left: auto;  margin-right: auto;  width: 50%;}
 </style>
-
-<h2><a href="https://instagram.com/gocode.studio/">GoCode Studio</a> tərəfindən hazırlanır.</h2>
+<br>
+<h2 align="center"><a href="https://instagram.com/gocode.studio/">GoCode Studio</a> tərəfindən hazırlanır.</h2>
 </body>
 </html>
